--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>account-service</artifactId>
 
     <properties>
+        <java.version>17</java.version>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
